tyring to fix alignment issues that is not there on local

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,13 +51,6 @@ h2 {
     margin: 2px auto;
 }
 
-/*#restock {
-    font-size: 1em;
-    line-height: 1.3em;
-    margin: 5px 0 0 0;
-    padding: .5em;
-}*/
-
 .input-field {
     font-family: inherit;
     font-size: 1em;
@@ -70,4 +63,4 @@ h2 {
     font-size: 1em;
     border-width: 5px;
     margin: 15px 0 10 0;
-}}
+}
